--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -1,7 +1,3 @@
-//Hide site branding as unused for now
-.site-branding {
-	display: none;
-}
 .main-navigation {
 	display: block;
 	width: 100%;
